Bug 123379 - Menu bar remains visible on pressing the Menubar icon on/off toggle (Linux - KDE).
Summary: Menu bar remains visible on pressing the Menubar icon on/off toggle (Linux - ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords:
: 124082 (view as bug list)
Depends on:
Blocks: KDE Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2019-02-12 02:57 UTC by gordon.lack
Modified: 2019-03-21 16:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gordon.lack 2019-02-12 02:57:54 UTC
Description:
With the Tabbed User interface there's not much point in having the Menu bar visible.
However, clicking the Menubar on/off toggle icon in Write/Calc/... has no effect - the menubar remains in place.

Steps to Reproduce:
1. Open Writer (or Calc, ...)
2. Ensure the Menubar is a visible button the toolbar.
3. Click it.

Actual Results:
Nothing happens.

Expected Results:
The menu bar should toggle on/off.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

OS in Kubuntu 18.10 - so I'm using KDE.

Problem happens if I start in Safe Mode.

This *does* work OK on MS Widnows 10.
Comment 1 Michael Weghorn 2019-02-12 14:59:14 UTC
Seems specific to the kde5 VCL plugin:

Confirmed with

Version: 6.3.0.0.alpha0+
Build ID: 3b5dd1d49e3b5d669d020f0b268625b106c1c661
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded

but not when using the gtk3 VCL plugin.

For clarification, since I didn't know at once:
> 2. Ensure the Menubar is a visible button the toolbar.

means: add a "Menubar" entry in "Tools" -> "Customize" -> "Toolbar" if it's not there yet
Comment 2 Roman Kuznetsov 2019-03-14 17:21:15 UTC
*** Bug 124082 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2019-03-19 19:33:32 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/612650147cb85e52d317142d022db99a28c0d98a%5E%21

tdf#123379: implement native menu bar toggle on/off

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 andreas_k 2019-03-20 08:22:28 UTC
Thanks a lot
Comment 5 Commit Notification 2019-03-21 16:13:03 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/f7de88aa5c19c3fd0ecc453bb1623bc9142b3e3b%5E%21

tdf#123379: implement native menu bar toggle on/off

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.