tdf#123379: implement native menu bar toggle on/off

qt5 didn't provide implementation of virtual SalMenu::ShowMenuBar
so native menu bar was visible at all times. Hopefully notebookbar
fans are happier now

Change-Id: Ie581397521369160e16f40231bade40100dcd6f6